# isek_rs

./: Cargo.toml  README.md
src/: app.rs  config.rs  helper.rs  lib.rs  main.rs  view.rs
src/widgets/: list.rs  mod.rs  status_bar.rs
