[package]
name = "isek_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
chrono-tz = "0.10.3"
clap = "4.5.40"
color-eyre = "0.6.5"
colors-transform = "0.2.11"
confy = "1.0.0"
crossterm = "0.29.0"
eyre = "0.6.12"
icalendar = "0.16.15"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
